--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
-header {background-color: #59EFA7; color: #1D5205;
+header{background-color: #59EFA7; color: #1D5205;
+    display: flex;
+   
 }
-<section class=”escola”>
-<h2 class=”escola-titulo”>Sobre a Escola</h2>
-<p class=”escola-texto-um”></p>
-<p class=”escola-texto-dois”></p>
-</section>
+body{
+    background-color: #E0FFF0; }
+    
+    
+    
+        
+        
