--- a/style.css
+++ b/style.css
@@ -1,11 +1,36 @@
-header{background-color: #59EFA7; color: #1D5205;
-    display: flex;
-   
+
+header
+{background-color: #59EFA7; color: #1D5205;
+    display: flex; 
 }
-body{
-    background-color: #E0FFF0; }
-    
-    
+
+body{ 
+    background-color: #E0FFF0; 
+}
+
+    .escola-imagem{
+        width: 25%;
+        
+    }
+    body{
+            font-family: 'Federo', sans-serif;
+    }
+    .escola{ 
+        display: flex;
+        justify-content: center;
+        align-items:center;
+        padding: 24px 3;
+    }
+    .escola-div-conteudo{
+        width: 35%;
+    }
+    .escola-titulo{
+        padding: 24px 0;
+    }
+    .estudante-imagem{
+        width: 120px;
+    }
+ 
     
         
         
